# AdventOfCode

./: .gitignore
2023/day10/: Cargo.toml
2023/day14/: Cargo.toml
2023/day23/: Cargo.toml
2024/: .gitignore  aoc.c  main.c  meson.build
2024/include/: days.h  globals.h
2024/src/: day00.c  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c  meson.build
2025/: main.c  meson.build
2025/include/: days.h
2025/include/lib/: list.h
2025/src/: day00.c  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  meson.build
2025/src/lib/: list.c  meson.build
compare/: Cargo.toml
day01/src/: main.rs
day03/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day1/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs
day12/src/: main.rs
day13/src/: main.rs
day14/: perf.data  perf.data.old
day14/src/: main.rs
day15/src/: main.rs
day17/src/: main.rs
day18/src/: main.rs
day19/src/: main.rs
day2/src/: main.rs
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs  part1.rs  vector.rs
day22/src/: main.rs
day23/src/: main.rs  part1.rs  vector.rs
day24/: Cargo.toml
day24/src/: main.rs  part2.rs  vector.rs
day3/src/: main.rs
day4/src/: main.rs
day5/: out1  out2
day5/src/: main.rs
day6/src/: main.rs
day7/src/: main.rs
day8/: notes
day8/src/: main.rs  main.rs.backup  (+1 more)
day8_refactor/: Cargo.toml
(+15 files in other folders)
